# libtimetag

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
examples/: libtimetag_example-notebook.ipynb
examples/example_data/: LICENSE.txt  QD02_r_1.sstt  QD02_r_1.sstt.c1  QD02_r_1.sstt.c100  QD02_r_1.sstt.c2
include/: algos.h  sstt_file.h  sstt_file2.h
src/: __init__.py  algos.cpp  getline.cpp  getline.h  python_bindings.cpp  sstt_file.cpp  sstt_file2.cpp
